--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,101 @@
 
 {% block content %}
 
-AND IM THE GOOD STUFF<br>
+<div class="row">
+	<div class="col-md-9">
+		WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW
+		WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW
+		WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW
+		WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW
+		WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW
+		WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW
+	</div><!-- .col-md-9 -->
+
+	<div class="col-md-3">
+		<div class="container">
+
+			<div class="row">
+				<div class="col-md-12">
+
+					<form>
+						<label>Hotels</label>
+						<select class="form-control">
+							 <option>1</option>
+							 <option>2</option>
+							 <option>3</option>
+						 </select>
+						 <button type="submit" class="btn btn-primary">+</button>
+					</form>
+
+					<form>
+						<label>Restaurants</label>
+						<select class="form-control">
+							 <option>1</option>
+							 <option>2</option>
+							 <option>3</option>
+						 </select>
+						 <button type="submit" class="btn btn-primary">+</button>
+					</form>
+
+					<form>
+						<label>Activities</label>
+						<select class="form-control">
+							 <option>1</option>
+							 <option>2</option>
+							 <option>3</option>
+						 </select>
+						 <button type="submit" class="btn btn-primary">+</button>
+					</form>
+
+				</div><!-- .col-md-12 -->
+			</div><!--.row-->
+
+			<div class="row">
+				<div class="col-md-12">
+					Day 2 <button type="submit" class="btn btn-danger">+</button>
+				</div><!-- .col-md-12 -->
+			</div><!--.row-->
+
+			<div class="row">
+				<div class="col-md-12">
+					<div class="panel panel-default">
+					 <div class="panel-heading">
+					   <ul>
+					   	<li>1</li>
+					   	<li>2</li>
+					   	<li>3</li>
+					   	<li>+</li>
+					   </ul>
+					 </div>
+					 <div class="panel-body">
+
+					   <div>
+					   	My Hotel
+					   	<div><span>Andaz Wall Street</span><span><button type="submit" class="btn btn-danger">+</button></span></div>
+					   </div>
+
+					   <div>
+					   	My Restaurants
+					   	<div><span>The Capital Grille</span><span><button type="submit" class="btn btn-danger">+</button></span></div>
+					   	<div><span>Bouley</span><span><button type="submit" class="btn btn-danger">+</button></span></div>
+					   </div>
+
+					   <div>
+					   	My Activities
+					   	<div><span>Mahayana Temple Buddhist Association</span><span><button type="submit" class="btn btn-danger">+</button></span></div>
+					   	<div><span>South Street Seaport</span><span><button type="submit" class="btn btn-danger">+</button></span></div>
+					   </div>
+
+					</div>
+				</div><!-- .col-md-12 -->
+			</div><!--.row-->
+
+		</div><!-- .container -->
+	</div><!-- .col-md-3 -->
+</div><!-- .row -->
+
+
+<!-- AND IM THE GOOD STUFF<br>
 <ul>
 {% for restaurant in allRestaurants %}
 <li>The restaurants: {{restaurant.name}} </li>
@@ -17,7 +111,7 @@ AND IM THE GOOD STUFF<br>
 {% for activity in allActivities %}
 <li>The activity: {{activity.name}} </li>
 {% endfor %}
-</ul><br>
+</ul><br> -->
 
 
 
