--- a/views/layout.html
+++ b/views/layout.html
@@ -10,7 +10,7 @@
 </header>
 
 <body>
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -42,7 +42,7 @@
 <br>
 <br>
 
-<script src="/bower_components/jquery/jquery.js"></script>
+<script src="/bower_components/jquery/dist/jquery.js"></script>
 <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
 </body>
