--- a/views/layout.html
+++ b/views/layout.html
@@ -5,6 +5,10 @@
 <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 <link href="/stylesheets/main.css" rel="stylesheet">
+
+
+
+
 <title>Trip Planner 1</title>
 
 </header>
@@ -42,8 +46,40 @@
 <br>
 <br>
 
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC62Q3fI-hsJMcb9htJZes2RFDym3BdqTg&sensor=true"></script>
 <script src="/bower_components/jquery/dist/jquery.js"></script>
 <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
+<!--- MAP -->
+<script type="text/javascript">
+function initialize_gmaps() {
+    // initialize new google maps LatLng object
+    var myLatlng = new google.maps.LatLng(40.705189,-74.009209);
+    // set the map options hash
+    var mapOptions = {
+        center: myLatlng,
+        zoom: 16,
+        mapTypeId: google.maps.MapTypeId.ROADMAP
+    };
+    // get the maps div's HTML obj
+    var map_canvas_obj = document.getElementById("map-canvas");
+    // initialize a new Google Map with the options
+    var map = new google.maps.Map(map_canvas_obj, mapOptions);
+    // Add the marker to the map
+    var marker = new google.maps.Marker({
+        position: myLatlng,
+        title:"Hello World!"
+    });
+    // Add the marker to the map by calling setMap()
+    marker.setMap(map);
+}
+
+$(document).ready(function() {
+    initialize_gmaps();
+});
+</script>
+
+
 </body>
+
 </html>
