--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -39,6 +39,8 @@ body {
 	background-color: #e5e5e5;
 	border: 0;
 	border-radius: 15px;
+	padding-top: 20px;
+	padding-bottom: 5px;
 }
 
 select.form-control {
