--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -31,7 +31,9 @@ body {
   margin: 0 8%;
   background-color: #e5e5e5;
   border: 0;
-  border-radius: 15px; }
+  border-radius: 15px;
+  padding-top: 20px;
+  padding-bottom: 5px; }
 
 select.form-control {
   width: 88%;
