done styling main page

--- a/views/index.html
+++ b/views/index.html
@@ -48,8 +48,8 @@
 			</div><!--.row-->
 
 			<div class="row">
-				<div class="col-md-12">
-					Day 2 <button type="submit" class="btn btn-danger">+</button>
+				<div class="col-md-12 day">
+					Day 2 <button class="removeButton"><span>+</span></button>
 				</div><!-- .col-md-12 -->
 			</div><!--.row-->
 
@@ -59,7 +59,7 @@
 					 <div class="panel-heading">
 					   <ul>
 					   	<li>1</li>
-					   	<li>2</li>
+					   	<li class="activeDay">2</li>
 					   	<li>3</li>
 					   	<li>+</li>
 					   </ul>
@@ -67,20 +67,20 @@
 					 <div class="panel-body">
 
 					   <div>
-					   	My Hotel
-					   	<div><span>Andaz Wall Street</span><span><button type="submit" class="btn btn-danger">+</button></span></div>
+					   	<span class="itinerary-label">My Hotel</span>
+					   	<div class="itinerary-item"><span class="name">Andaz Wall Street</span><button class="removeButton pull-right"><span>+</span></button></div>
 					   </div>
 
 					   <div>
-					   	My Restaurants
-					   	<div><span>The Capital Grille</span><span><button type="submit" class="btn btn-danger">+</button></span></div>
-					   	<div><span>Bouley</span><span><button type="submit" class="btn btn-danger">+</button></span></div>
+					   	<span class="itinerary-label">My Restaurants</span>
+					   	<div class="itinerary-item"><span class="name">The Capital Grille</span><button class="removeButton pull-right"><span>+</span></button></div>
+					   	<div class="itinerary-item"><span class="name">Bouley</span><button class="removeButton pull-right"><span>+</span></button></div>
 					   </div>
 
 					   <div>
-					   	My Activities
-					   	<div><span>Mahayana Temple Buddhist Association</span><span><button type="submit" class="btn btn-danger">+</button></span></div>
-					   	<div><span>South Street Seaport</span><span><button type="submit" class="btn btn-danger">+</button></span></div>
+					   	<span class="itinerary-label">My Activities</span>
+					   	<div class="itinerary-item"><span class="name">Mahayana Temple Buddhist Association</span><button class="removeButton pull-right"><span>+</span></button></div>
+					   	<div class="itinerary-item"><span class="name">South Street Seaport</span><button class="removeButton pull-right"><span>+</span></button></div>
 					   </div>
 
 					</div>
