--- a/views/layout.html
+++ b/views/layout.html
@@ -79,6 +79,12 @@ $(document).ready(function() {
 });
 </script>
 
+<script>
+
+  $("#map-canvas").css("min-height",$(window).height());
+
+</script>
+
 
 </body>
 
