--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -3,12 +3,9 @@ body {
 	padding-top: 10px;
 }
 
-.navbar-inverse .navbar-nav > li > a, .navbar-inverse .navbar-brand {
-   color: #93c0ff;
-}
-
+.navbar-inverse .navbar-nav > li > a, .navbar-inverse .navbar-brand,
 .navbar-inverse .navbar-nav>.active>a {
-   	color: #93c0ff;
+   color: #93c0ff;
 }
 
 .container {
@@ -25,7 +22,6 @@ body {
 	padding: 0;
 	margin: 0;
 	width: 100%;
-	min-height: 90vh;
 }
 
 .sidebar {
@@ -43,27 +39,14 @@ body {
 	padding-bottom: 5px;
 }
 
-select.form-control {
-	width: 88%;
-	display: inline;
-	height: 25px;
-}
-
-.addButton {
-	display: inline;
-	border-radius: 11px;
-	height: 22px;
-	width: 22px;
-	color: white;
-	background-color: #93c0ff;
-	border: 0px;
-	margin-left: 5px;
-	position: relative;
-	bottom: 2px;
-}
-
 form {
 	margin-bottom: 5%;
+}
+
+select.form-control, .panel-body .name {
+	width: 80%;
+	display: inline;
+	height: 25px;
 }
 
 span {
@@ -71,3 +54,62 @@ span {
 	padding-bottom: 10px;
 	font-size: 12px;
 }
+
+.addButton, .removeButton {
+	display: inline;
+	border-radius: 11px;
+	height: 22px;
+	width: 22px;
+	color: white;
+	border: 0px;
+	margin-left: 5px;
+	position: relative;
+	bottom: 2px;
+}
+
+.removeButton {
+	background-color: #f93636;
+}
+
+.addButton {
+	background-color: #93c0ff;
+}
+
+.day {
+	margin: 20px auto;
+	text-align: center;
+	font-size: 20px;
+}
+
+.panel .panel-heading {
+	background-color: black;
+	ul {
+		padding-left: 0px;
+		list-style: none;
+		margin: 5px 5px;
+		li {
+			cursor: pointer;
+			display: inline;
+			border: 2px solid #93c0ff;
+			border-radius: 20px;
+			padding: 8px 12px;
+			color: #93c0ff;
+			&.activeDay, &:hover {
+				background-color: #93c0ff;
+				color: black;
+			}
+		}
+	} 
+}
+
+.itinerary-item {
+	margin: 5px 0;
+}
+
+.itinerary-label {
+	font-size: 16px;
+	color: #666;
+	margin: 15px 0 0;
+	padding-bottom: 0;
+}
+
