--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,6 +1,7 @@
 body {
   color: #000;
-  padding-top: 10px; }
+  padding-top: 10px;
+  background-color: #cecece; }
 
 .navbar-inverse .navbar-nav > li > a, .navbar-inverse .navbar-brand,
 .navbar-inverse .navbar-nav > .active > a {
@@ -28,7 +29,7 @@ body {
   margin: 0 8%;
   background-color: #e5e5e5;
   border: 0;
-  border-radius: 15px;
+  border-radius: 10px;
   padding-top: 20px;
   padding-bottom: 5px; }
 
@@ -67,8 +68,15 @@ span {
   text-align: center;
   font-size: 20px; }
 
+.panel {
+  border-radius: 10px;
+  width: 86%;
+  margin: 0 8%;
+  padding: 0; }
+
 .panel .panel-heading {
-  background-color: black; }
+  background-color: black;
+  border-radius: 10px 10px 0 0; }
   .panel .panel-heading ul {
     padding-left: 0px;
     list-style: none;
@@ -83,6 +91,10 @@ span {
       .panel .panel-heading ul li.activeDay, .panel .panel-heading ul li:hover {
         background-color: #93c0ff;
         color: black; }
+
+.itineraries {
+  margin: 0;
+  padding: 0 8px; }
 
 .itinerary-item {
   margin: 5px 0; }
