--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -1,6 +1,7 @@
 body {
 	color: #000;
 	padding-top: 10px;
+	background-color: #cecece;
 }
 
 .navbar-inverse .navbar-nav > li > a, .navbar-inverse .navbar-brand,
@@ -34,7 +35,7 @@ body {
 	margin: 0 8%;
 	background-color: #e5e5e5;
 	border: 0;
-	border-radius: 15px;
+	border-radius: 10px;
 	padding-top: 20px;
 	padding-bottom: 5px;
 }
@@ -81,8 +82,16 @@ span {
 	font-size: 20px;
 }
 
+.panel {
+	border-radius: 10px;
+	width: 86%;
+	margin: 0 8%;
+	padding: 0;
+}
+
 .panel .panel-heading {
 	background-color: black;
+	border-radius: 10px 10px 0 0 ;
 	ul {
 		padding-left: 0px;
 		list-style: none;
@@ -100,6 +109,11 @@ span {
 			}
 		}
 	} 
+}
+
+.itineraries{
+	margin: 0;
+	padding: 0 8px;
 }
 
 .itinerary-item {
