Fixed map issue

--- a/views/layout.html
+++ b/views/layout.html
@@ -77,7 +77,7 @@ function initialize_gmaps() {
     };
 
     var restoImage = {
-    	ur`l: 'http://maps.google.com/mapfiles/ms/micons/restaurant.png',
+    	url: 'http://maps.google.com/mapfiles/ms/micons/restaurant.png',
     	size: new google.maps.Size(50,50),
     	origin: new google.maps.Point(0,0),
     	anchor: new google.maps.Point(0,32)    	
