Fixed a few things

--- a/views/index.html
+++ b/views/index.html
@@ -50,7 +50,7 @@
 
 			<div class="row">
 				<div class="col-md-12 day">
-					Day 2 <button class="removeButton"><span>+</span></button>
+					Day 2 <button class="removeButton"><span>x</span></button>
 				</div><!-- .col-md-12 -->
 			</div><!--.row-->
 
@@ -69,19 +69,19 @@
 
 					   <div>
 					   	<span class="itinerary-label">My Hotel</span>
-					   	<div class="itinerary-item"><span class="name">Andaz Wall Street</span><button class="removeButton pull-right"><span>+</span></button></div>
+					   	<div class="itinerary-item"><span class="name">Andaz Wall Street</span><button class="removeButton pull-right"><span>x</span></button></div>
 					   </div>
 
 					   <div>
 					   	<span class="itinerary-label">My Restaurants</span>
-					   	<div class="itinerary-item"><span class="name">The Capital Grille</span><button class="removeButton pull-right"><span>+</span></button></div>
-					   	<div class="itinerary-item"><span class="name">Bouley</span><button class="removeButton pull-right"><span>+</span></button></div>
+					   	<div class="itinerary-item"><span class="name">The Capital Grille</span><button class="removeButton pull-right"><span>x</span></button></div>
+					   	<div class="itinerary-item"><span class="name">Bouley</span><button class="removeButton pull-right"><span>x</span></button></div>
 					   </div>
 
 					   <div>
 					   	<span class="itinerary-label">My Activities</span>
-					   	<div class="itinerary-item"><span class="name">Mahayana Temple Buddhist Association</span><button class="removeButton pull-right"><span>+</span></button></div>
-					   	<div class="itinerary-item"><span class="name">South Street Seaport</span><button class="removeButton pull-right"><span>+</span></button></div>
+					   	<div class="itinerary-item"><span class="name">Mahayana Temple Buddhist Association</span><button class="removeButton pull-right"><span>x</span></button></div>
+					   	<div class="itinerary-item"><span class="name">South Street Seaport</span><button class="removeButton pull-right"><span>x</span></button></div>
 					   </div>
 
 					</div>
